Fix cart overlap

--- a/src/styles/TitleBar.css
+++ b/src/styles/TitleBar.css
@@ -3,6 +3,7 @@
 .title-bar-container {
     position: sticky;
     top: 0;
+    z-index: 1000;
 
     display: flex;
     justify-content: space-around;
